--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<H1>This is my web-site</H1>
+<html>
+<body>
+    <H2>HackBI Is a Really FUN Event</H2>
+    <p>This is my first paragraph<br>
+
+        <i>enters are completely ignored</i>
+        <br>
+        <b>which is really annoying.</b>
+    </p>
+    <p>This is my second paragraph</p>
+    <img src="dweeb.png" alt="Dweeb Picture" height="45px">
+    <a href="second.html" target="_none">second page</a>
+</body>
+</html>
